--- a/app/views/shared/_form_items.html.erb
+++ b/app/views/shared/_form_items.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <div class="items-form__field">
-    <%= f.text_field :price, class: "items-form__text-input", placeholder: "Price" %>
+    <%= f.text_field :price_cents, class: "items-form__text-input", placeholder: "Price" %>
   </div>
 
   <div class="items-form__field">
