--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -181,3 +181,15 @@ textarea:focus {
     }
   }
 }
+
+
+/*
+============================
+        Itmes Filter
+============================
+*/
+
+.items-filter {
+  margin-top: 0;
+  margin-left: 0;
+}
