--- a/app/assets/stylesheets/layout/_grids.scss
+++ b/app/assets/stylesheets/layout/_grids.scss
@@ -1,7 +1,31 @@
+body {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: 300px auto min-content;
+}
+
+header {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.container {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
+
+footer {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+
+}
+
 .container {
   max-width: 960px;
   padding: 0 25px;
   margin: 0 auto;
+  margin-top: 30px;
 }
 
 .container-m {
@@ -26,9 +50,9 @@ img {
 .menu-list {
   display: flex;
   flex-wrap: wrap;
-
+  justify-content: space-around;
   li {
-    flex: 0 1 25%;
+    flex: 0 1 40%;
     padding: 10px;
     margin-bottom: 20px;
     list-style: none;
@@ -46,6 +70,7 @@ img {
 .grid-wrapper {
   display: grid;
   gap: 40px;
+  grid-template-columns: 210px auto;
   aside {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
