--- a/app/assets/stylesheets/shared/_item_card.scss
+++ b/app/assets/stylesheets/shared/_item_card.scss
@@ -4,59 +4,62 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  min-height: 320px;
   padding: 10px;
-  border: 1px solid #d6d9dc;
   border-radius: 4px;
-  box-shadow: 5px 4px 4px #eff0f1;
   > a {
     flex: 0 0 20%;
     display: block;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     min-height: 100px;
     margin: 0;
     margin-bottom: 10px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 5px;
   }
   &__item-info { 
     flex: 0 0 80%;
     position: relative;
     display: flex;
     flex-direction: column;
-    h3 {
-      margin-bottom: 10px;
-    }
-    
+    .top-info {
+      flex: 0 0 20%;
+      display: flex;
+      justify-content: space-between;
+      h3 {
+        margin-bottom: 10px;
+        > a {
+          color: #000;
+          padding: 0;
+          margin: 0;
+          margin-bottom: 5px;
+          font-size: 1.3rem;
+          font-weight: bold;
+          text-align: left;
+        }
+      }
+      span {
+        margin-bottom: 5px;
+        display: block;
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: #F0542C;
+      }
+    }    
     p {  
-      margin-top: 8px;
+      margin-bottom: 15px;
       font-size: 14px;
       text-align: left;
     }
-    
-    h3 {
-      > a {
-        color: #000;
-        padding: 0;
-        margin: 0;
-        margin-bottom: 5px;
-        font-size: 14px;
-        font-weight: bold;
-        text-align: left;
-      }
-    }
-    span {
-      margin-bottom: 5px;
-      display: block;
-      font-size: 15px;
-      font-weight: bold;
-      color: #F0542C;
-    }
-    .btn-add-to-cart {
-      position: absolute;
-      bottom: 0;
-      left: 0;
+    form {
+      margin: 0;
+      // .btn-add-to-cart {
+      //   position: absolute;
+      //   bottom: 0;
+      //   left: 0;
+      // }
     }
   }
 }
+
 
