add footer content

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,13 +17,13 @@
 @import 'components/buttons';
 @import 'components/components';
 @import 'components/flash';
+@import 'components/icons';
 
 @import 'shared/header';
 @import 'shared/item_card';
 @import 'shared/error_messages';
 @import 'shared/list_reviews';
 @import 'shared/footer';
-@import 'shared/hero';
 
 @import 'items/edit';
 @import 'items/show';
