--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,29 @@
-<p>Page footer</p>
-
-<h3>Site Navigation</h3>
-<ul>
-  <li>link</li>
-  <li>link</li>
-  <li>link</li>
-  <li>link</li>
-  <li>link</li>
-</ul>
+<header>
+  <div class="__logo"></div>
+  <nav class="__social-nav">
+    <ul>
+      <li class="social-icon"><a href="#"></a></li>
+      <li class="social-icon"><a href="#"></a></li>
+      <li class="social-icon"><a href="#"></a></li>
+      <li class="social-icon"><a href="#"></a></li>
+    </ul>
+  </nav>
+  <nav class="__site-nav">
+    <ul>
+      <li><a href="#">HOME</a></li>
+      <li><a href="#">MENU</a></li>
+      <li><a href="#">CONTACT</a></li>
+      <li><a href="#">STORY</a></li>
+      <li><a href="#">LOCATION</a></li>
+    </ul>
+  </nav>
+  <aside class="company-info">
+    <a href="#">2464 Royal Ln. Mesa, New Jersey 45463</a>
+    <a href="tel:+627045550127">(704) 555-0127</a>
+    <a href="mailto:tim.jennings@example.com">tim.jennings@example.com</a>
+  </aside>
+</header>
+<footer>
+  <p>CYBER FOOD | The Food Lovers</p>
+  <p>ALL RIGHTS RESERVED</p>
+</footer>
