--- a/app/assets/stylesheets/items/_index.scss
+++ b/app/assets/stylesheets/items/_index.scss
@@ -1,9 +1,10 @@
 .menu-option {
+  text-align: center;
   margin-bottom: 10px;
   &__button {
     display: inline-block;
     padding: 1em 3em;
-    margin: 0 auto;
+    margin: auto;
     margin-bottom: 2%;
     font-weight: bold;
     background-color: $secondary-color;
@@ -12,6 +13,7 @@
     border-radius: 4%;
   }
   &__discount {
+    text-align: center;
     margin-bottom: 5px;
     text-transform: uppercase;
     font-size: 1.2rem;
