--- a/app/assets/stylesheets/shared/_item_card.scss
+++ b/app/assets/stylesheets/shared/_item_card.scss
@@ -17,6 +17,13 @@
     background-repeat: no-repeat;
     border-radius: 5px;
   }
+  &__price {
+    margin-bottom: 5px;
+    display: block;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #F0542C;
+  }
   &__item-info { 
     flex: 0 0 80%;
     position: relative;
@@ -33,17 +40,10 @@
           padding: 0;
           margin: 0;
           margin-bottom: 5px;
-          font-size: 1.3rem;
+          font-size: 1rem;
           font-weight: bold;
           text-align: left;
         }
-      }
-      span {
-        margin-bottom: 5px;
-        display: block;
-        font-size: 1.5rem;
-        font-weight: bold;
-        color: #F0542C;
       }
     }    
     p {  
