improve order page style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 @import 'components/components';
 @import 'components/flash';
 @import 'components/icons';
+@import 'components/links';
 
 @import 'shared/header';
 @import 'shared/item_card';
