--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
       <%= yield %>
     </div>
 
-    <div class="footer">
+    <footer class="footer">
       <%= render "shared/footer" %>
-    </div>
+    </footer>
   </body>
 </html>
