--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -60,6 +60,18 @@
   font-weight: bold;
 }
 
+.checkout-btn {
+  margin-top: 0;
+  border: 2px solid #222;
+  color: #222;
+  padding: 10px 50px;
+}
+
+.checkout-btn:hover {
+  color: #F0542C;
+  border-color: #F0542C;
+}
+
 a[class*=btn-action] {
   padding: 6px 15px;
   text-transform: capitalize;
