add styel to new menu form

--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -1,10 +1,9 @@
-<h1>Menu Option</h1>
-<h2>Choose You Faorite Dishes</h2>
-<p>10% off</p>
+<h1 class="heading menu-new-heading">Menu Option</h1>
+<h2>Choose Your Favorite Dishes</h2>
 
 
 <%= render 'shared/form_menu', { appetaizers: @appetaizers,
                                  main_dishes: @main_dishes, 
                                  desserts: @desserts, 
                                  drinks: @drinks,
-                                 menu: @menu} %>
+                                 menu: @menu } %>
