--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -3,19 +3,18 @@
         General
 ============================
 */
+form {
+  width: 100%;
+  margin: auto;
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
 
 select {
   margin-left: 10px;
   margin-right: 10px;
   height: 20px;
   width: 100%;
-}
-
-form {
-  width: 100%;
-  margin: auto;
-  margin-top: 40px;
-  margin-bottom: 10px;
 }
 
 .field {
@@ -192,5 +191,31 @@ textarea:focus {
 .items-filter {
   &__search-btn {
     margin-top: 10px;
+  }
+}
+
+/*
+============================
+         New Menu
+============================
+*/
+
+.menus-new {
+  input {
+    margin-top: 5px;
+  }
+  select {
+    margin: 0;
+    margin-top: 5px;
+  }
+
+  .number-field {
+    label {
+      margin-right: 5px;
+    }
+    input {
+      width: 50px;
+      padding-left: 10px;
+    }
   }
 }
