add feature toggle filter form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,7 @@
 @import 'categories/index';
 
 @import 'dashboard/items';
+@import 'dashboard/index';
 
 @import 'responsive/mobile';
 @import 'responsive/tablet';
