--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -6,4 +6,5 @@
                                  main_dishes: @main_dishes, 
                                  desserts: @desserts, 
                                  drinks: @drinks,
-                                 menu: @menu } %>
+                                 menu: @menu 
+                                } %>
