--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -24,7 +24,7 @@
   <thead>
     <tr>
       <th class="order-table__item-title" >Name</th>
-      <th class="order-table__item-title" >Description</th>
+      <th class="order-table__item-description" >Description</th>
       <th class="order-table__item-quantity">Quantity</th>
       <th class="order-table__item-price">Price</th>
       <th class="order-table__item-subtotal">Sub-total</th>
