--- a/app/assets/stylesheets/components/_tables.scss
+++ b/app/assets/stylesheets/components/_tables.scss
@@ -15,6 +15,7 @@ table {
   }
   
   th {
+    white-space: nowrap;
     font-weight: bold;
   }
   
@@ -77,7 +78,10 @@ table {
 .order-table {
   margin-bottom: 10px;
 
-  &__item-title {
+  &__item-title,
+  &__item-description,
+  &__menu-title,
+  &__menu-description {
     font-weight: bold;
     text-align: left;
   }
@@ -86,6 +90,7 @@ table {
   &__item-subtotal,
   &__item-quantity, 
   &__menu-quantity,
+  &__menu-subtotal,
   &__total {
     text-align: right;
   }
@@ -94,6 +99,11 @@ table {
     font-weight: bold;
   }
   
+  &__menu-remove, 
+  &__menu-edit,
+  &__item-remove {
+    white-space: nowrap;
+  }
 }
 
 .categories-index {
