--- a/app/assets/stylesheets/components/_tables.scss
+++ b/app/assets/stylesheets/components/_tables.scss
@@ -149,7 +149,7 @@ table {
 
 .dashboard-index {
   .orders-table {
-
+    margin-top: 10px;
     thead {
       tr {
         background-color: $dark;
