--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -10,7 +10,9 @@
   
   
   <table class="orders-table">
-  <span id="orders-filter" class="filter-show-btn">Filter</span>
+  <span id="orders-filter" class="filter-show-btn">
+    Filter <%= icon 'fas', "filter" %>
+  </span>
     <thead>
       <tr>
         <th>ID</th>
